--- a/config/config.json
+++ b/config/config.json
@@ -1,238 +1,249 @@
 {"config": {
-    "table": [
-    {
-        "col": "name",
-        "datatype": "string",
-        "min": "",
-        "max": "128",
-        "step": "",
-        "ddfile": ""
+    "tablecats": {
+        "personal": "Personal Information",
+        "relation": "Relation",
+        "contact": "Contact Information",
+        "other": "Other Information"
     },
-    {
-        "col": "irln",
-        "datatype": "string",
-        "min": "",
-        "max": "128",
-        "step": "",
-        "ddfile": ""
+    "table": {
+        "personal": [
+        {
+            "col": "name",
+            "datatype": "string",
+            "min": "",
+            "max": "128",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "irln",
+            "datatype": "string",
+            "min": "",
+            "max": "128",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "nick",
+            "datatype": "string",
+            "min": "",
+            "max": "128",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "prns",
+            "datatype": "string",
+            "min": "",
+            "max": "32",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "birt",
+            "datatype": "string",
+            "min": "",
+            "max": "32",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "loca",
+            "datatype": "text",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "appe",
+            "datatype": "text",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": ""
+        }],
+        "relation": [
+        {
+            "col": "dtmt",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "mtth",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "seen",
+            "datatype": "string",
+            "min": "",
+            "max": "32",
+            "step": "",
+            "ddfile": ""
+        }],
+        "contact": [
+        {
+            "col": "smp1",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu1",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "smp2",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu2",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "smp3",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu3",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "smp4",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu4",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "smp5",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu5",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "smp6",
+            "datatype": "select",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": "socials"
+        },
+        {
+            "col": "smu6",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "ema1",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "ema2",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "ema3",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "ema4",
+            "datatype": "string",
+            "min": "",
+            "max": "64",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "nphn",
+            "datatype": "string",
+            "min": "",
+            "max": "32",
+            "step": "",
+            "ddfile": ""
+        }],
+        "other": [
+        {
+            "col": "empl",
+            "datatype": "text",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": ""
+        },
+        {
+            "col": "note",
+            "datatype": "text",
+            "min": "",
+            "max": "",
+            "step": "",
+            "ddfile": ""
+        }
+        ]
     },
-    {
-        "col": "nick",
-        "datatype": "string",
-        "min": "",
-        "max": "128",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "prns",
-        "datatype": "string",
-        "min": "",
-        "max": "32",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "birt",
-        "datatype": "string",
-        "min": "",
-        "max": "32",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "loca",
-        "datatype": "text",
-        "min": "",
-        "max": "1024",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "dtmt",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "mtth",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "seen",
-        "datatype": "string",
-        "min": "",
-        "max": "32",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "appe",
-        "datatype": "text",
-        "min": "",
-        "max": "1024",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp1",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu1",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp2",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu2",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp3",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu3",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp4",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu4",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp5",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu5",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "smp6",
-        "datatype": "select",
-        "min": "",
-        "max": "",
-        "step": "",
-        "ddfile": "socials"
-    },
-    {
-        "col": "smu6",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "ema1",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "ema2",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "ema3",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "ema4",
-        "datatype": "string",
-        "min": "",
-        "max": "64",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "nphn",
-        "datatype": "string",
-        "min": "",
-        "max": "32",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "empl",
-        "datatype": "text",
-        "min": "",
-        "max": "1024",
-        "step": "",
-        "ddfile": ""
-    },
-    {
-        "col": "note",
-        "datatype": "text",
-        "min": "",
-        "max": "2048",
-        "step": "",
-        "ddfile": ""
-    }
-    ],
     "headers": {
         "name": "Name",
         "irln": "Full Real Name",
@@ -271,30 +282,65 @@
         {"type": "info", "col": "irln", "width": "20", "link": "", "icon": "", "text": ""},
         {"type": "info", "col": "tmod", "width": "20", "link": "", "icon": "", "text": ""},
         {"type": "info", "col": "tcrd", "width": "20", "link": "", "icon": "", "text": ""},
-        {"type": "button", "col": "", "width": "5", "link": "view", "icon": "fa-solid fa-bars", "text": "View"},
-        {"type": "button", "col": "", "width": "5", "link": "edit", "icon": "fa-solid fa-pen-to-square", "text": "Edit"},
-        {"type": "button", "col": "", "width": "5", "link": "delete", "icon": "fa-solid fa-xmark", "text": "Delete"},
+        {"type": "button", "col": "", "width": "5", "link": "/view", "icon": "fa-solid fa-bars", "text": "View"},
+        {"type": "button", "col": "", "width": "5", "link": "/edit", "icon": "fa-solid fa-pen-to-square", "text": "Edit"},
+        {"type": "button", "col": "", "width": "5", "link": "/delete", "icon": "fa-solid fa-xmark", "text": "Delete"},
         {"type": "button", "col": "", "width": "5", "link": "", "icon": "", "text": ""}
     ],
     "dropdown": {
-        "socials": [
-        ["disc", "Discord"],
-        ["ebay", "eBay"],
-        ["epic", "Epic Games"],
-        ["face", "Facebook"],
-        ["gith", "GitHub"],
-        ["link", "LinkedIn"],
-        ["payp", "PayPal"],
-        ["inst", "Instagram"],
-        ["redd", "Reddit"],
-        ["snap", "Snapchat"],
-        ["stea", "Steam"],
-        ["twit", "Twitter"],
-        ["webs", "Personal Website"]
-        ]
+        "socials": {
+            "disc": "Discord",
+            "ebay": "eBay",
+            "epic": "Epic Games",
+            "face": "Facebook",
+            "gith": "GitHub",
+            "link": "LinkedIn",
+            "payp": "PayPal",
+            "inst": "Instagram",
+            "redd": "Reddit",
+            "snap": "Snapchat",
+            "stea": "Steam",
+            "twit": "Twitter",
+            "webs": "Personal Website"
+        }
     },
+    "navbar": [
+        {
+            "name": "main",
+            "onlyloggedin": "False",
+            "text": "Main",
+            "link": "/",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "new",
+            "onlyloggedin": "False",
+            "text": "Add Contact",
+            "link": "/new/",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "search",
+            "onlyloggedin": "False",
+            "text": "Search",
+            "link": "/search/",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "settings",
+            "onlyloggedin": "False",
+            "text": "Settings",
+            "link": "/settings/",
+            "float": "right",
+            "type": "link"
+        }
+    ],
     "misc": {
-        "strftime": "%b %d, %Y, %H:%M %Z",
+        "strftime": "%b %-d, %Y, %H:%M %Z",
+        "basecss": "config/common/base.css",
         "jquery": "/static/jquery/jquery-3.7.0.min.js",
         "tablesorter": "/static/tablesorter/js/jquery.tablesorter.min.js",
         "tablesorterwidget": "/static/tablesorter/js/jquery.tablesorter.widgets.min.js"
