--- a/config/config.json
+++ b/config/config.json
@@ -2,12 +2,115 @@
     "misc": {
         "strftime": "%b %-d, %Y, %H:%M %Z",
         "logotext": "ContactList",
-        "basecss": "config/common/base.css",
+        "basescss": "config/common/base.scss",
         "bootstrapcssurl": "/static/bootstrap/css/bootstrap.min.css",
         "bootstrapjsurl": "/static/bootstrap/js/bootstrap.min.js",
         "jqueryurl": "/static/jquery/jquery-3.7.0.min.js",
         "tablesorterurl": "/static/tablesorter/js/jquery.tablesorter.min.js",
         "tablesorterwidgeturl": "/static/tablesorter/js/jquery.tablesorter.widgets.min.js"
+    },
+    "headers": {
+        "name": "Name",
+        "irln": "Full Real Name",
+        "nick": "Nicknames",
+        "prns": "Pronouns",
+        "birt": "Birthday",
+        "loca": "Location",
+        "dtmt": "Date Met",
+        "mtth": "Met Through",
+        "seen": "Seen in real life?",
+        "appe": "Appearance",
+        "smp1": "Social Media Platform 1",
+        "smu1": "Social Media Username 1",
+        "smp2": "Social Media Platform 2",
+        "smu2": "Social Media Username 2",
+        "smp3": "Social Media Platform 3",
+        "smu3": "Social Media Username 3",
+        "smp4": "Social Media Platform 4",
+        "smu4": "Social Media Username 4",
+        "smp5": "Social Media Platform 5",
+        "smu5": "Social Media Username 5",
+        "smp6": "Social Media Platform 6",
+        "smu6": "Social Media Username 6",
+        "ema1": "Email 1",
+        "ema2": "Email 2",
+        "ema3": "Email 3",
+        "ema4": "Email 4",
+        "nphn": "Phone Number",
+        "empl": "Employment Information",
+        "note": "Notes",
+        "tcrd": "Created",
+        "tmod": "Modified"
+    },
+    "htmltable": [
+        {"type": "info", "col": "name", "width": "20", "link": "", "icon": "", "text": ""},
+        {"type": "info", "col": "irln", "width": "20", "link": "", "icon": "", "text": ""},
+        {"type": "info", "col": "tmod", "width": "20", "link": "", "icon": "", "text": ""},
+        {"type": "info", "col": "tcrd", "width": "20", "link": "", "icon": "", "text": ""},
+        {"type": "buttons", "width": "20", "buttons": [
+            {"link": "/view", "icon": "fa-solid fa-bars", "text": "View"},
+            {"link": "/edit", "icon": "fa-solid fa-pen-to-square", "text": "Edit"},
+            {"link": "/delete", "icon": "fa-solid fa-xmark", "text": "Delete"}
+        ]}
+    ],
+    "navbar": [
+        {
+            "name": "main",
+            "onlyloggedin": "False",
+            "text": "Main",
+            "link": "/",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "new",
+            "onlyloggedin": "False",
+            "text": "Add Contact",
+            "link": "/new/",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "search",
+            "onlyloggedin": "False",
+            "text": "Search",
+            "link": "",
+            "float": "left",
+            "type": "link"
+        },
+        {
+            "name": "docs",
+            "onlyloggedin": "False",
+            "text": "Documentation",
+            "link": "/docs/",
+            "float": "right",
+            "type": "link"
+        },
+        {
+            "name": "settings",
+            "onlyloggedin": "False",
+            "text": "Settings",
+            "link": "/settings/",
+            "float": "right",
+            "type": "link"
+        }
+    ],
+    "dropdown": {
+        "socials": {
+            "disc": "Discord",
+            "ebay": "eBay",
+            "epic": "Epic Games",
+            "face": "Facebook",
+            "gith": "GitHub",
+            "link": "LinkedIn",
+            "payp": "PayPal",
+            "inst": "Instagram",
+            "redd": "Reddit",
+            "snap": "Snapchat",
+            "stea": "Steam",
+            "twit": "Twitter",
+            "webs": "Personal Website"
+        }
     },
     "tablecats": {
         "personal": "Personal Information",
@@ -257,106 +360,23 @@
             }
         ]
     },
-    "headers": {
-        "name": "Name",
-        "irln": "Full Real Name",
-        "nick": "Nicknames",
-        "prns": "Pronouns",
-        "birt": "Birthday",
-        "loca": "Location",
-        "dtmt": "Date Met",
-        "mtth": "Met Through",
-        "seen": "Seen in real life?",
-        "appe": "Appearance",
-        "smp1": "Social Media Platform 1",
-        "smu1": "Social Media Username 1",
-        "smp2": "Social Media Platform 2",
-        "smu2": "Social Media Username 2",
-        "smp3": "Social Media Platform 3",
-        "smu3": "Social Media Username 3",
-        "smp4": "Social Media Platform 4",
-        "smu4": "Social Media Username 4",
-        "smp5": "Social Media Platform 5",
-        "smu5": "Social Media Username 5",
-        "smp6": "Social Media Platform 6",
-        "smu6": "Social Media Username 6",
-        "ema1": "Email 1",
-        "ema2": "Email 2",
-        "ema3": "Email 3",
-        "ema4": "Email 4",
-        "nphn": "Phone Number",
-        "empl": "Employment Information",
-        "note": "Notes",
-        "tcrd": "Created",
-        "tmod": "Modified"
-    },
-    "htmltable": [
-        {"type": "info", "col": "name", "width": "20", "link": "", "icon": "", "text": ""},
-        {"type": "info", "col": "irln", "width": "20", "link": "", "icon": "", "text": ""},
-        {"type": "info", "col": "tmod", "width": "20", "link": "", "icon": "", "text": ""},
-        {"type": "info", "col": "tcrd", "width": "20", "link": "", "icon": "", "text": ""},
-        {"type": "button", "col": "", "width": "5", "link": "/view", "icon": "fa-solid fa-bars", "text": "View"},
-        {"type": "button", "col": "", "width": "5", "link": "/edit", "icon": "fa-solid fa-pen-to-square", "text": "Edit"},
-        {"type": "button", "col": "", "width": "5", "link": "/delete", "icon": "fa-solid fa-xmark", "text": "Delete"},
-        {"type": "button", "col": "", "width": "5", "link": "", "icon": "", "text": ""}
-    ],
-    "dropdown": {
-        "socials": {
-            "disc": "Discord",
-            "ebay": "eBay",
-            "epic": "Epic Games",
-            "face": "Facebook",
-            "gith": "GitHub",
-            "link": "LinkedIn",
-            "payp": "PayPal",
-            "inst": "Instagram",
-            "redd": "Reddit",
-            "snap": "Snapchat",
-            "stea": "Steam",
-            "twit": "Twitter",
-            "webs": "Personal Website"
-        }
-    },
-    "navbar": [
-        {
-            "name": "main",
-            "onlyloggedin": "False",
-            "text": "Main",
-            "link": "/",
-            "float": "left",
-            "type": "link"
+    "docs": {
+        "path": "config/docs/",
+        "showhidden": "True",
+        "usesorter": "False",
+        "knowntypes": {
+            ".json": {"name": "JSON", "type": "source"},
+            ".md": {"name": "Markdown", "type": "markdown"},
+            ".py": {"name": "Python Source", "type": "source"},
+            ".txt": {"name": "Plain Text", "type": "text"},
+            ".zip": {"name": "File Archive", "type": "binary"},
+            "": {"name": "Plain Text", "type": "text"}
         },
-        {
-            "name": "new",
-            "onlyloggedin": "False",
-            "text": "Add Contact",
-            "link": "/new/",
-            "float": "left",
-            "type": "link"
-        },
-        {
-            "name": "search",
-            "onlyloggedin": "False",
-            "text": "Search",
-            "link": "/search/",
-            "float": "left",
-            "type": "link"
-        },
-        {
-            "name": "docs",
-            "onlyloggedin": "False",
-            "text": "Documentation",
-            "link": "/docs/",
-            "float": "right",
-            "type": "link"
-        },
-        {
-            "name": "settings",
-            "onlyloggedin": "False",
-            "text": "Settings",
-            "link": "/settings/",
-            "float": "right",
-            "type": "link"
-        }
-    ]
+        "table": [
+            {"title": "Name", "align": "left", "width": "45%", "data": "dname", "islink": "True"},
+            {"title": "Type", "align": "center", "width": "15%", "data": "dtype", "islink": "False"},
+            {"title": "Size", "align": "center", "width": "15%", "data": "fsize", "islink": "False"},
+            {"title": "Modified", "align": "center", "width": "25%", "data": "ftmod", "islink": "False"}
+        ]
+    }
 }}
