--- a/config/config.json
+++ b/config/config.json
@@ -13,7 +13,7 @@
         "strftime": "%b %-d, %Y, %H:%M %Z"
     },
     "tables": [
-        {"classprefix": "ContactItem", "cfg": "config/tables/contact.json"}
+        {"classprefix": "Contact", "cfg": "config/tables/contact.json", "important": "True"}
     ],
     "htmltable": [
         {"type": "info", "db": "ContactItem", "col": "name", "width": "20", "link": "", "icon": "", "text": ""},
