--- a/config/config.json
+++ b/config/config.json
@@ -49,7 +49,7 @@
         },
         {
             "col": "loca",
-            "datatype": "mdtext",
+            "datatype": "text",
             "min": "",
             "max": "",
             "step": "",
@@ -57,7 +57,7 @@
         },
         {
             "col": "appe",
-            "datatype": "mdtext",
+            "datatype": "text",
             "min": "",
             "max": "",
             "step": "",
@@ -228,7 +228,7 @@
         "other": [
         {
             "col": "empl",
-            "datatype": "mdtext",
+            "datatype": "text",
             "min": "",
             "max": "",
             "step": "",
@@ -236,7 +236,7 @@
         },
         {
             "col": "note",
-            "datatype": "mdtext",
+            "datatype": "text",
             "min": "",
             "max": "",
             "step": "",
